# visual_side_radar

./: .env  CMakeLists.txt  Dockerfile  entrypoint.sh  libpanda-apps.yaml  package.xml
catkin_ws/src/radar_display/: CMakeLists.txt  package.xml
catkin_ws/src/radar_display/launch/: radar_display.launch
catkin_ws/src/radar_display/scripts/: radar_angle.py  radar_display.py  radar_grid_120.py
instructions/: docker_to_docker_comm.txt  docker_to_raspi_comm.txt  self_instructions.txt
launch/: radar_display.launch
src/: radar_angle_120.py  radar_display.py  radar_grid_lat_long.py  radar_track_simulator.py
visual_side_radar/: description.txt  install.sh  installController.sh  installRosPackages.sh  service  start.sh  stop.sh  uninstall.sh
