<?xml version="1.0"?>
<package format="2">
  <name>visual_side_radar</name>
  <version>0.0.0</version>
  <description>Radar visualization and simulator node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
